syntax = "proto3";

message SpiderKeyLoggingPayload {
    message SpiderKeyLoggingContextPayload {
        string ProcessName = 1;
        string WindowsName = 2;
    }
    bytes PlaintextKeylog = 1;
    SpiderKeyLoggingContextPayload Context = 2;
}